@@ -5,6 +5,7 @@
 * Fix: excluding columns in FieldConfigurator was causing inconsistent column behavior (move/hide/resize)
 * Fix: resolving conflicts with Ext.form.FormPanel's <tt>submit</tt> and <tt>load</tt> methods
 * New: rudimentary FileUploadField support in FormPanel (it will do a normal, non-AJAX, form submit)
+* New: Netzke::Window widget, supports persistent moving/resizing.
 
 = v0.5.4 - 2009-10-12
 * Dependencies updated
